# SQL_generator

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml
docs/: requirements.txt
source/: api.rst  conf.py  index.rst
src/sql_generator/: QueryObjects.py  __init__.py  query_generator.py  select_query_generator.py
tests/: test_group_by.py  test_joins.py  test_limit.py  test_order_by.py  test_query_builder.py  test_query_generator.py  test_query_objects.py  test_select.py  test_where.py  utils.py
